# workflow-studio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  test_e2e.py
backend/app/: config.py  main.py
backend/app/db/: engine.py  repository.py  schedules_repo.py
backend/app/engine/: cancellation.py  context.py  docker_network.py  executor.py  matrix.py  scheduler.py
backend/app/models/: presets.py  runs.py  schedules.py  steps.py  workflows.py  ws_messages.py
backend/app/routes/: baselines.py  presets.py  runs.py  schedules.py  secrets.py  steps.py  suites.py  uploads.py  webhooks.py  workflows.py  ws.py
backend/app/scheduling/: scheduler.py
backend/app/secrets/: __init__.py
backend/app/services/: junit_export.py  run_diff.py  run_service.py
backend/app/steps/: assertions.py  base.py  expand_matrix.py  gcp_config.py  http_request.py  inject_variables.py  llm_request.py  load_targets.py  notify.py  registry.py  snapshot.py  summarize_results.py
backend/app/storage/: preset_store.py  workflow_store.py  yaml_store.py
backend/data/workflows/: anthropic-multi-endpoint-test.yaml  namifusion-bearer-test.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/constants/: statusColors.ts
frontend/src/layouts/: WorkstationLayout.tsx
frontend/src/lib/: curlParser.ts  curlToStep.ts  nodeFactory.ts
frontend/src/pages/: MetricsPage.tsx  RunHistoryPage.tsx  WorkflowEditorPage.tsx
(+25 files in other folders)
