[project]
name = "workflow-studio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
gcp = ["google-cloud-storage>=2.18.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
